--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -2,7 +2,7 @@
     Mobile Menu Core Style
 */
 
-.slicknav_btn { position: relative; display: block; vertical-align: middle; float: right; padding: 0.438em 0.625em 0.438em 0.625em; line-height: 1.125em; cursor: pointer; }
+.slicknav_btn { position: relative; display: block; vertical-align: middle; float: left; padding: 0.438em 0.625em 0.438em 0.625em; line-height: 1.125em; cursor: pointer; }
 .slicknav_menu  .slicknav_menutxt { display: block; line-height: 1.188em; float: left; }
 /*.slicknav_menu .slicknav_icon { float: left; margin: 0.188em 0 0 0.438em; }*/
 .slicknav_menu .slicknav_no-text { margin: 0 }
@@ -22,14 +22,14 @@
 .slicknav_menu { *zoom: 1 }
 
 
-.slicknav_menu:before{
+/*.slicknav_menu:before{
 	float: left;
 	height: 40px;
 	background: url(../images/logo.png)no-repeat;
 	width: 110px;
 	margin-left: 7px;
 	margin-top: 7px;;
-}
+}*/
 /* 
     User Default Style
     Change the following styles to modify the appearance of the menu.
