More Coming Soon Page
moved current working page to indexNew.html so index would be more of a
coming soon page

--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,9 @@ border: none;
 	font-size:28px;
 	font-weight:400;
 }
+.cBusiness h3.comingSoon{
+	font-size:55px;
+}
 .cBusiness h4{
 	margin-top: 16px;
 	text-align:center;
